--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ layout: default
   <ul>
     <li><a class="nav-link" href="#Introduction">Introduction</a></li>
     <li><a class="nav-link" href="#add_info">Adding information to the website</a></li>
+    <li><a class="nav-link" href="#forms">Forms</a></li>
     <li><a class="nav-link" href="https://cs4sg.github.io/resources.html" target="_blank">Resources</a></li>
     <li><a class="nav-link" href="https://docs.google.com/document/d/1_oJGjgSufz_YQ7Z0g6GItEA46z9770ZcZO6dj3ZuDnA/edit?usp=sharing" target="_blank">Website Architecture</a></li>
   </ul>
@@ -32,12 +33,8 @@ layout: default
         <ul>
           <li>
             <h3>Select the form according to the catagory of information</h3>
-            <p>There are the list of all the forms you can fill. Please select the suitable catagory of form and fill it out.</p>
-            <ol>
-              {% for form in site.forms %}
-                <li><a href="./{{ form.url }}" target="_blank">{{ form.title }}</a></li>
-              {% endfor %}
-            </ol>
+            <p>You can find out the list of all the forms you can fill. Please select the suitable catagory of form and fill it out.</p>
+            <a class="nav-link" href="#forms">Click here to see the links to all the forms.</a>
           </li>
           <li>
             <h3>Fill out the form and click on "Generate MD File"</h3>
@@ -65,6 +62,19 @@ layout: default
           </li>
         </ul>
       </p>
+    </article>
+  </section>
+  <section class="main-section" id="forms">
+    <header>Forms</header>
+    <article>
+      <p>
+        Here are a list of all the forms you can fill:
+      </p>
+      <ol>
+        {% for form in site.forms %}
+          <li><a href="./{{ form.url }}" target="_blank">{{ form.title }}</a></li>
+        {% endfor %}
+      </ol>
     </article>
   </section>
 </main>
