--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -133,7 +133,7 @@ background: #67b0d1;
   
           <center>
           <div>
-              <input type="button" value="Generate MD File" onclick="saveFile(); after_submission()"/>
+              <input type="button" value="Generate MD File" onclick="saveFile(); after_submission()" class="sectionbutton"/>
           </div>
           </center>
       </div>
