help section added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ layout: default
     <li><a class="nav-link" href="#forms">Forms</a></li>
     <li><a class="nav-link" href="https://cs4sg.github.io/resources.html" target="_blank">Resources</a></li>
     <li><a class="nav-link" href="https://docs.google.com/document/d/1_oJGjgSufz_YQ7Z0g6GItEA46z9770ZcZO6dj3ZuDnA/edit?usp=sharing" target="_blank">Website Architecture</a></li>
+    <li><a class="nav-link" href="#help">Help&nbsp;<i class="fa fa-question-circle"></i></a></li>
   </ul>
 </nav>
 <main id="main-doc">
@@ -75,6 +76,20 @@ layout: default
           <li><a href="./{{ form.url }}" target="_blank">{{ form.title }}</a></li>
         {% endfor %}
       </ol>
+    </article>
+  </section>
+  <section class="main-section" id="help">
+    <header>Help</header>
+    <article>
+      <p>
+        If you need help in any of the steps or find any difficulty or technical error, please contact:
+        <ol>
+          <li><a href="mailto:kjoseph@buffalo.edu">Kenneth Joseph</a>: for any organization related queries.</li>
+          <li><a href="mailto:atri@buffalo.edu">Atri Rudra</a>: for any organization related queries.</li>
+          <li><a href="mailto:prakshal@buffalo.edu">Prakshal Jain</a>: for any technical queries related to the website.</li>
+          <li><a href="mailto:hopekara@buffalo.edu">Hope Kara</a>: for any technical queries related to the website.</li>
+        </ol>
+      </p>
     </article>
   </section>
 </main>
