--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -133,9 +133,7 @@ content: "";
       </div><br/>
   
       <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
-          <h5>Post Content</h5>
-          <small style="text-align:left">Write in the space below.</small>
-          <small style="text-align:left">By default, the excerpt that will be displayed on the Funding Page is the first paragraph. If you wish to customize the length of the excerpt, insert <code>&lt;!--end--&gt;</code> where you want the excerpt to end.</small>
+          <h5>Funding Description</h5>
           <div><iframe src="../edit.html" style="border:0px; width:100%; min-height:50vh;"></iframe></div>
       </div><br>    
           <div>
