--- a/_forms/research_project_form.html
+++ b/_forms/research_project_form.html
@@ -116,9 +116,7 @@ background: #67b0d1;
 
 <br/>
 <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
-    <h5>Post Content</h5>
-    <small style="text-align:left">Write your blog post in the space below.</small>
-    <small style="text-align:left">By default, the excerpt that will be displayed on the blog page is the post's first paragraph. If you wish to customize the length of the excerpt, insert <code>&lt;!--end--&gt;</code> where you want the excerpt to end.</small>
+    <h5>Project Description</h5>
     <div><iframe src="../edit.html" style="border:0px; width:100%; min-height:50vh;"></iframe></div>
 </div><br>  
 
