--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -120,12 +120,12 @@ content: "";
   
       <br><br>
           <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
-          <center><b>Choose related research projects</b></center><div id="tagged" class="hiddenCB"></div>
+          <center><h5>Choose related research projects</h5></center><div id="tagged" class="hiddenCB"></div>
       </div><br>
   
       <br>
       <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
-      <center><b>Choose Related People</b></center><div id="peoples" class="hiddenCB"></div><input type="text" id="new_person" placeholder="Enter a new Person" style="width:50%"> &nbsp; 
+      <center><h5>Choose Related People</h5></center><div id="peoples" class="hiddenCB"></div><input type="text" id="new_person" placeholder="Enter a new Person" style="width:50%"> &nbsp; 
       <input type="button" onclick="add_new('new_person','people', 'new_people_added');" value="Add Person" style="width:10%"> &nbsp; OR  &nbsp;
       <input type="button" onclick="window.open('\/people_form.html')" value="Add to Organization">
       <br /><br />
