--- a/_forms/people_form.html
+++ b/_forms/people_form.html
@@ -169,8 +169,10 @@ upload: https://github.com/CS4SG/CS4SG.github.io/tree/master/_people
       </select>
   </div>
   <div id="image_area"></div>
+
+  <div>
   <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px">
-  <center><h3><i class="icofont-linkedin"></i>&nbsp;<i class="icofont-web"></i>&nbsp;<u>Social Links</u>&nbsp;<i class="icofont-twitter"></i>&nbsp;<i class="icofont-email"></i></h3></center>
+  <center><h5>Social Links</h5></center>
   <div><input type="text" id="linkedin" placeholder="Enter your LinkedIn profile URL" /></div>
   <div><input type="text" id="twitter" placeholder="Enter your Twitter profile URL" /></div>
   <div><input type="text" id="website" placeholder="Enter your Website URL" /></div>
