--- a/_forms/funding_form.html
+++ b/_forms/funding_form.html
@@ -118,31 +118,30 @@ content: "";
               <input type="date" id="valid" placeholder="Enter grant end date" required="required"/><br/>
           </div>
   
-      <br><br>
+          <div>
           <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
           <center><h5>Choose related research projects</h5></center><div id="tagged" class="hiddenCB"></div>
-      </div><br>
+      </div></div>
   
-      <br>
+      <div>
       <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
       <center><h5>Choose Related People</h5></center><div id="peoples" class="hiddenCB"></div><input type="text" id="new_person" placeholder="Enter a new Person" style="width:50%"> &nbsp; 
       <input type="button" onclick="add_new('new_person','people', 'new_people_added');" value="Add Person" style="width:10%"> &nbsp; OR  &nbsp;
       <input type="button" onclick="window.open('\/people_form.html')" value="Add to Organization">
       <br /><br />
       <ul id="new_people_added" style="font-weight: normal; text-align: left; padding: 10px;"><LH><b>Added non-organization Authors:</b></LH></ul>
-      </div><br/>
+      </div></div>
   
+      <div>
       <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
           <h5>Funding Description</h5>
           <div><iframe src="../edit.html" style="border:0px; width:100%; min-height:50vh;"></iframe></div>
-      </div><br>    
-          <div>
+      </div></div>  
           <center>
           <div>
-              <input type="button" value="Generate MD File" onclick="saveFile(); after_submission();"/>
+              <input type="button" value="Generate MD File" onclick="saveFile(); after_submission();" class="sectionbutton"/>
           </div>
           </center>
-      </div>
     </div>
     </div>
   <script>
