--- a/_forms/research_project_form.html
+++ b/_forms/research_project_form.html
@@ -105,20 +105,20 @@ background: #67b0d1;
 <div><input type="text" id="subheading" placeholder="Enter a brief Subheading"  required="required"/></div>
 
 
-<br>
+<div>
 <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
 <center><h5>Choose People related to this Project</h5></center><div id="peoples" class="hiddenCB"></div><input type="text" id="new_person" placeholder="Enter a new Person" style="width:50%"> &nbsp; <input type="button" onclick="add_new();" value="Add Person" style="width:10%"> &nbsp; OR  &nbsp;
 <input type="button" onclick="window.open('\/people_form.html')" value="Add to Organization"><br />
 <ul id="new_people_added" style="font-weight: normal; text-align: left; padding: 10px;"><LH><b>Added external People:</b></LH></ul>
 <small style="text-align:left"><font color="red">*</font>&nbsp;Click on the names that appear below "Added external People" to remove them from the list.</small><br/>
 <small style="text-align:left">If the tags doesn't show up, try refreshing the page. If the problem still persist, please contact <a href="mailto:prakshal@buffalo.edu">here</a>.</small>
-</div>
+</div></div>
 
-<br/>
+<div>
 <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
     <h5>Project Description</h5>
     <div><iframe src="../edit.html" style="border:0px; width:100%; min-height:50vh;"></iframe></div>
-</div><br>  
+</div></div>
 
 <center>
 <div>
