--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@ layout: default
               </li>
               
               <li>
-                <h4>HTML code to add a text / number / date / time / file etc. input</h4>
+                <h4>HTML code to add a text / number / date / time / datetime-local / file etc. input</h4>
                 <code>
                   &#60;div&#62;
-                    &#60;input type="<font style="color:white">text / number / date / time / file etc.</font>" 
+                    &#60;input type="<font style="color:white">text / number / date / time / datetime-local / file etc.</font>" 
                     id="<font style="color:white">The ID you want to provide</font>" 
                     placeholder="<font style="color:white">The placeholder text</font>" 
                     required= <font style="color:white">Use this attribute only if you want the field to be required. Type <b><i>"required"</i></b></font>
@@ -173,7 +173,7 @@ layout: default
                   </li>
 
                     <!-- Start from here -->
-                    
+
                 </ol>
           </li>
         </ul>
