--- a/index.html
+++ b/index.html
@@ -215,11 +215,18 @@ layout: default
   &#60;ul id="<font style="color:white">id_ul</font>" 
   style="font-weight: normal; text-align: left; padding:10px;"&#62;
   &#60;LH&#62;&#60;b&#62;Added non-organization People:&#60;/b&#62;&#60;/LH&#62;&#60;/ul&#62;
-</code>
+                    </code>
                   </li>
 
                   <li>
-                    <h4>Adding Tags</h4>
+                    <h4 id="tags">Adding Tags</h4>
+                    <p>This is a 2-part functionality.
+                      <ol type="I">
+                      <li>Changes in the individual section of the main <a href="\" target="_blank">CS4SG website</a></li>
+                      <li>Fetching the data from the official website page into the form.</li>
+                      </ol>
+                    </p>
+                    
                   </li>
                 </ol>
           </li>
