--- a/_forms/code_form.html
+++ b/_forms/code_form.html
@@ -60,7 +60,8 @@ upload: https://github.com/CS4SG/CS4SG.github.io/tree/master/_code
         <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
             <h5>Code Description</h5>
             <div><iframe src="../edit.html" style="border:0px; width:100%; min-height:50vh;"></iframe></div>
-      </div></div>    
+        </div>
+      </div> 
   
           <center>
           <div>
@@ -80,7 +81,6 @@ upload: https://github.com/CS4SG/CS4SG.github.io/tree/master/_code
     
     var link_str = ""
       let saveFile = () => {
-          
           // Get the data from each element on the form.
           const topic = document.getElementById('topic').value;
           save_link()
