--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -2,6 +2,7 @@
 layout: form
 title: Blog Post Form
 upload: https://github.com/CS4SG/CS4SG.github.io/tree/master/_posts
+destination_layout: post
 ---
 
 <center>
@@ -100,7 +101,7 @@ upload: https://github.com/CS4SG/CS4SG.github.io/tree/master/_posts
           // This variable stores all the data.
           let data = 
               "---"+"\n"+
-              "layout: post"+"\n"+
+              "layout: {{ page.destination_layout }}"+"\n"+
               "title: "+topic+"\n"+
               "authors: "+people.toString()+"\n"+
               "image: "+"assets/img/"+image+"\n"+
