--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -2,6 +2,7 @@
 layout: form
 title: Publication Form
 upload: https://github.com/CS4SG/CS4SG.github.io/tree/master/_publications
+destination_layout: publication
 ---
 
 <center>
@@ -78,7 +79,7 @@ upload: https://github.com/CS4SG/CS4SG.github.io/tree/master/_publications
           // This variable stores all the data.
           let data = 
               "---"+"\n"+
-              "layout: publication"+"\n"+
+              "layout: {{ page.destination_layout }}"+"\n"+
               "title: "+topic+"\n"+
               "authors: "+people.toString()+"\n"+
               "published_in: "+publishers+"\n"+
