--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -113,7 +113,8 @@ destination_layout: post
               "tagged_courses: "+courses.toString()+"\n"+
               "tagged_funding: "+funding.toString()+"\n"+
               "key: "+topic+"\n"+
-              "description: "+msg+"\n"+"---"
+              "---"+"\n"+
+              msg
   
   
   
