--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -123,7 +123,7 @@ destination_layout: post
   
           // Convert the text to BLOB.
           const textToBLOB = new Blob([data], { type: 'text/plain' });
-          const sFileName = dates+topic.replace(/ /g, '-');+'.md';	   // The file to save the data.
+          const sFileName = dates+"-"+topic.replace(/ /g, '-')+'.md';	   // The file to save the data.
   
           let newLink = document.createElement("a");
           newLink.download = sFileName;
