--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -107,7 +107,7 @@ destination_layout: post
               "layout: {{ page.destination_layout }}"+"\n"+
               "title: "+topic+"\n"+
               "authors: "+people.toString()+"\n"+
-              "image: "+"assets/img/"+image+"\n"+
+              "image: "+image+"\n"+
               "image_description: "+imagedesc+"\n"+
               "excerpt_separator: <!--end-->"+"\n"+
               "tagged_projects: "+res_topics.toString()+"\n"+
