--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -10,7 +10,7 @@ destination_layout: post
   
     <div><input type="text" id="topic" placeholder="Enter post title" required="required"/></div>
         
-    <div><input type="date" id="dts" placeholder="Enter date" /></div>
+    <div><input type="date" id="dts" placeholder="Enter date" required="required"/></div>
     
     <div>
     <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
