--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -145,7 +145,7 @@ destination_layout: post
     }
   
     var res_topics = tagger(getdata("/projects.html"), 'tagged', "t");
-    var people = tagger(getdata("/projects.html"), 'peoples', "v");
+    var people = tagger(getdata("/people.html"), 'peoples', "v");
     var courses = tagger(getdata("/courses.html"), 'tag_courses', "c");
     var publications = tagger(getdata("/publications.html"), 'publish', "publ");
     var funding = tagger(getdata("/funding.html"), 'funded', "funds");
