--- a/_forms/blogpost_form.html
+++ b/_forms/blogpost_form.html
@@ -70,7 +70,7 @@ destination_layout: post
       <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">  
         <h5>Post Content</h5>
         <p style="text-align:left">Write your blog post in the space below.</p>
-        <p style="text-align:left">By default, the excerpt that will be displayed on the blog page is the post's first paragraph. If you wish to customize the length of the excerpt, insert <code>&lt;!--end--&gt;</code> where you want the excerpt to end.</p>
+        <p style="text-align:left">By default, the excerpt that will be displayed on the blog page is the post's first paragraph. If you wish to customize the length of the excerpt, insert &lt;!--end--&gt; where you want the excerpt to end.</p>
         <div><iframe src="../edit.html" style="border:0px; width:100%; min-height:50vh;"></iframe></div>
       </div></div>
   
