Update and rename research_project_form.html to project_form.html

--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -1,6 +1,6 @@
 ---
 layout: form
-title: Research Project Form
+title: Project Form
 upload: https://github.com/CS4SG/CS4SG.github.io/tree/master/_projects
 destination_layout: project
 ---
