--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -12,7 +12,7 @@ destination_layout: project
 <form onsubmit="saveFile(); after_submission()">
 <div>
 <!--Add few elements to the form-->
-<center><h3><b>Research Flashcard</b></h3></center>
+<center><h3><b>Project Flashcard</b></h3></center>
 <div>
     <input type="text" id="topic" placeholder="Enter Topic" required="required"/>
 </div>
@@ -20,7 +20,7 @@ destination_layout: project
     <input type="text" id="description" placeholder="Enter a brief description" required="required" />
 </div>
 <center><hr/><br>
-<h3><b>Research Project</b></h3>
+<h3><b>Project Details</b></h3>
 </center>
 <div>
 
