--- a/_forms/news_form.html
+++ b/_forms/news_form.html
@@ -143,7 +143,7 @@ destination_layout: news
       }
   
       function after_submission(){
-        document.getElementById("after_submission").innerHTML = "<br><br><center><table width='80%'><h2>Thank you for submitting your publication.</h2><br><br> To add it to the CS4SG Research Section, just upload the file to the <b>_publications<b> folder. Here is the link for the folder <br><a href = 'https://github.com/CS4SG/CS4SG.github.io/tree/master/_event' target='_blank'>https://github.com/CS4SG/CS4SG.github.io/tree/master/_event</a></table></center>"
+        document.getElementById("after_submission").innerHTML = "<br><br><center><table width='80%'><h2>Thank you for submitting your publication.</h2><br><br> To add it to the CS4SG Research Section, just upload the file to the destination folder. Here is the link for the folder <br><a href = '{{ page.upload }}' target='_blank'>{{ page.upload }}</a></table></center>"
       }
   
     var res_topics = tagger(getdata("/projects.html"), 'tagged', "t");
