--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ layout: default
   <font style="color:white">Section_name</font>:
     output: true
       </code>
-      <p style="font-style: italic;">Step 4: Creating the <b>layout</b> file- In order to display the individial pages.</p>
+      <p style="font-style: italic;">Step 4: Creating the <b>layout</b> file- In order to display the individial pages, need to be inside <b>_layouts</b> folder.</p>
       <code>     
   ---
   layout: <font style="color:white">Section layout type</font>
