--- a/_forms/news_form.html
+++ b/_forms/news_form.html
@@ -125,7 +125,7 @@ destination_layout: news
   
           // Convert the text to BLOB.
           const textToBLOB = new Blob([data], { type: 'text/plain' });
-          const sFileName = ztopic+'.md';	   // The file to save the data.
+          const sFileName = topic+'.md';	   // The file to save the data.
   
           let newLink = document.createElement("a");
           newLink.download = sFileName;
