--- a/_forms/news_form.html
+++ b/_forms/news_form.html
@@ -8,7 +8,7 @@ destination_layout: news
 <center>
 <div id = "after_submission">
 
-    <div><input type="text" id="topic" placeholder="Enter Title" required="required"  onchange='check_existence("/news.html", "topic")'/></div>
+    <div><input type="text" id="topic" placeholder="Enter Title" required="required" onchange="check_existence('/news.html', 'topic')"/></div>
 
     <div>
         <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
@@ -226,7 +226,7 @@ destination_layout: news
         });
         return(String(sessionStorage.getItem(file)));
     }
-    
+
 
     function check_existence(page_link, id){
       let s = getdata(page_link)
@@ -234,9 +234,6 @@ destination_layout: news
       if(titles.includes(document.getElementById(id).value)){
         alert("Title already exist! please choose another title.")
         document.getElementById(id).value = '';
-      }
-      else if(document.getElementById(id).value == null){
-        alert("Please enter a Title.")
       }
     }
 </script>
