--- a/_forms/publication_form.html
+++ b/_forms/publication_form.html
@@ -9,7 +9,7 @@ destination_layout: publication
     <div style="width:100%;">
     <div id = "after_submission">          
   
-        <div><input type="text" id="topic" placeholder="Enter Title" required="required"/></div>
+        <div><input type="text" id="topic" placeholder="Enter Title" required="required" onchange="check_existence('/publications.html','topic')"/></div>
 
         <div><input type="text" id="publishers" placeholder="Published in" /></div>
         
@@ -209,5 +209,14 @@ destination_layout: publication
         }
     });
     return(String(sessionStorage.getItem(file)));
+  }
+
+  function check_existence(page_link, id){
+      let s = getdata(page_link);
+      titles = s.split(",")
+      if(titles.includes(document.getElementById(id).value)){
+        alert("Title already exist! please choose another title.")
+        document.getElementById(id).value = '';
+      }
   }
 </script>
