--- a/_forms/news_form.html
+++ b/_forms/news_form.html
@@ -8,7 +8,7 @@ destination_layout: news
 <center>
 <div id = "after_submission">
 
-    <div><input type="text" id="topic" placeholder="Enter Title" required="required"/></div>
+    <div><input type="text" id="topic" placeholder="Enter Title" required="required" onchange="check_existence('nsdnd','topic')"/></div>
 
     <div>
         <div style="padding: 12px; font: 17px Calibri; width: 100%; border: 1px solid #ccc; border-radius: 4px;">
@@ -96,7 +96,6 @@ destination_layout: news
           
           // Get the data from each element on the form.
           const topic = document.getElementById('topic').value;
-          check_existence('/news.html', 'topic')
           const image = document.getElementById('image').value;
           var article_url = document.getElementById('article_url').value;
           var event_date = document.getElementById('event_date').value;
@@ -227,16 +226,5 @@ destination_layout: news
         });
         return(String(sessionStorage.getItem(file)));
     }
-
-
-    function check_existence(page_link, id){
-      let s = getdata(page_link)
-      let titles = s.split(",");
-      if(titles.includes(document.getElementById(id).value)){
-        alert("Title already exist! please choose another title.")
-        document.getElementById(id).value = '';
-      }
-    }
 </script>
-  
 
